# fpx-convert

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
scripts/: build-release.sh
specs/: 0001-fpx-conversion-pipeline.md  README.md
src/: cfbf.rs  error.rs  exif.rs  filetime.rs  fpx_ids.rs  jpeg_writer.rs  lib.rs  main.rs  parse.rs  png_writer.rs  propset.rs  subimage_header.rs  tile_decode.rs
test-media/: README.md
tests/: error_paths.rs
