[package]
name = "fpx-convert"
version = "0.1.0"
edition = "2024"

[dependencies]
cfb = "0.14"
jpeg-decoder = "0.3"
jpeg-encoder = "0.7"
png = "0.18"
thiserror = "2"

[profile.release]
# Smaller binaries matter for a NAS deployment target; debug symbols aren't
# needed in shipped release builds.
strip = true
